Correctly handle blurring options hopefully

--- a/client/styles/_author/partials/_questions.scss
+++ b/client/styles/_author/partials/_questions.scss
@@ -121,6 +121,10 @@
     display: none;
     margin-top: 3rem;
     margin-bottom: 0;
+
+    .au-no-outline {
+      outline: none;
+    }
   }
 
   .au-c-question__answers--maintain{
